GNOME Bugzilla – Bug 684434
Segmentation fault when exiting GTK applications in GTK 3.5.18 with an AT client registered.
Last modified: 2012-09-20 19:13:33 UTC
Reproduceable with gedit, GTK 3.5.18, I get the following trace:
+ Trace 230879
Thread 1 (Thread 0x7f5d78ba1980 (LWP 5732))
I believe commit 5debed5ae247c1dd440cb71d0a6d328df74b0844 introduced the problem, as reverting this commit causes the problem to go away.
Created attachment 224813 [details] Threaded stack trace. Attached is a threaded stack trace.
This is a bug in atk_bridge_adaptor_cleanup. Look closely at this code: for (ls = clients; ls; ls = ls->next) g_free (l->data); g_slist_free (clients); clients = NULL; Took me a while to see it too: the list is iterated with ls, but l->data is freed
Thanks for tracking this down. Pushed as commit b3210d.