Fix crashes in atk_bridge_adaptor_cleanup

When freeing data, atk_bridge_adaptor_cleanup frees the wrong pointer,
resulting in a crash. Also, we need to close D-Bus connections before
removing the last reference, or libdbus will abort.

https://bugzilla.gnome.org/show_bug.cgi?id=684434